# blike

./: .gitignore  AUTHORS  INSTALL  LICENSE  LICENSE-JP  Makefile  Makefile.am  Makefile.in  README-JP  README.md  autogen.sh  blike.h  blike.pc.in  blike0.h  config.h.in  configure.ac  configure.in  memo.txt
doc/: Doxyfile
include/: blike.h  blike0.h  blikedrv.h  setjmp.h
include/lib/bl3d/: bl3d.h  bl3d_dobj.h  bl3d_frame_buffer.h  bl3d_matrix_macro.h  bl3d_triangle.h
include/lib/bl_math/: bl_complex.h
include/lib/bl_spline/: bl_spline.h
include/omake/bl3d/: bl3d_io_macro.h  bl3d_math.h  bl3d_math_macro.h  bl3d_matrix.h  bl3d_matrix_macro.h  bl3d_packet_pool.h  bl3d_system.h  bl3d_types.h
include/omake/bl_lua/: bl_lua.h
include/omake/bl_malloc/: bl_malloc.h
include/omake/bl_math/: bl_dft.h  bl_fast_sincos.h
include/omake/bl_plot/: bl_plot.h
lib_src/alsa/: drvalsa_player.c  drvalsa_player.h  test_drvalsa_player.c  test_drvalsa_player_thread.c
lib_src/bl3d/: Makefile  bl3d.h  bl3d_dobj.c  bl3d_frame_buffer.c  bl3d_io_macro.h  bl3d_math.c  bl3d_math_macro.h  bl3d_matrix.c  bl3d_matrix_macro.h  bl3d_packet_pool.c  bl3d_system.c  bl3d_triangle.c  m  test_bl3d_matrix.c
lib_src/bl_load_xpm/: bl_load_xpm.c  bl_load_xpm.h
lib_src/bl_math/: bl_complex.c
lib_src/bl_plot/: bl_plot.c
lib_src/bllua/: bllua_regist_bl_func.c  bllua_regist_bld_func.c  bllua_regist_bld_func.h  bllua_system.c
lib_src/common/: Makefile  bl_malloc_aligned.c  clock.c  cls.c  color.c  copyrct0.c  drawrect.c  drwptn_d.c  drwptn_e.c  drwptn_r.c  fillrect.c  getpix.c  gets.c  icol.c  inkey.c  inptint.c  keybuf.c  locate.c  openwin.c  printf.c  puts.c  puts1.c  rand.c  readywin.c  rgb.c  rnd.c  setbcol.c  setcol.c  vscanf.c
lib_src/gtk/: Makefile  Makefile.gtk2  create_xpm.c  create_xpm.h  drvgtk_interface.c  drvgtk_key_ring_buffer.c  drvgtk_key_ring_buffer.h  drvgtk_keybord_state.c  drvgtk_keybord_state.h  drvgtk_main.c  drvgtk_malloc.c  drvgtk_malloc.h  drvgtk_pthread.c  drvgtk_pthread.h  drvgtk_signal.c  drvgtk_signal.h  drvgtk_signal_chain.c  drvgtk_signal_chain.h  drvgtk_sleep.c  drvgtk_system.c  drvgtk_system.h  drvgtk_transrate_keycode.c  drvgtk_transrate_keycode.h  hankaku_font.c  main_screen.c  main_screen.h  main_window.c  main_window.h
lib_src/lfb/: Makefile  drvlfb_main.c  drvlfb_malloc.c  drvlfb_malloc.h  drvlfb_system.c  drvlfb_system.h
pkgconfig/: c_blike.conf  c_blike.pc
samples/: Makefile  Makefile.gtk2  Makefile.in  Makefile.lfb  bball00a.c  bl3d_cube.c  bl3d_cube2.c  boxes00a.c  build-lfb.sh  build.sh  build_gtk2.sh  build_lfb.sh  kcube00a.c  keyboard00.c  mouse00.c  mouse01.c  mouse02.c  msgk00a.c  msgk01a.c  mt_xor0a.c  test.xpm  test000a.c  test001a.c  test002a.c  test003a.c  test004a.c  test005a.c  test006a.c  test008a.c  test010a.c  test011a.c  test012a.c  test013a.c  test014a.c  test015a.c  test016a.c  test017a.c  test018a.c  test019a.c  test020a.c  (+12 more)
samples/ai_teto/: AI.c  AI.h  BLOCK.c  BLOCK.h  GEN_MINO.c  GEN_MINO.h  IO_BLIKE.c  IO_BLIKE.h  MINO.c  MINO.h  Makefile  Makefile~  PAD.c  PAD.h  PANEL.c  PANEL.h  POS.c  POS.h  TETO.c  TETO.h  main.c
samples/ghc/: Makefile  blike.hs  hs_bball00a.hs  hs_bl_wrapper.c  hs_boxes00a.hs  hs_kcube00a.hs  hs_msgk00a.hs  hs_msgk01a.hs  hs_mt_xor0a.hs  hs_test000a.hs  hs_test001a.hs  hs_test002a.hs  hs_test003a.hs  hs_test004a.hs  hs_test005a.hs  hs_test006a.hs  hs_test008a.hs  hs_test010a.hs  hs_test011a.hs  hs_test012a.hs  hs_test015a.hs  hs_test015b.hs  hs_test016a.hs  hs_test017a.hs  hs_test018a.hs  hs_test020a.hs  hs_test021a.hs
src/common/: Makefile  Makefile.am  Makefile.in  bl_draw_2db_spline.c  char8b.c  clock.c  cls.c  color.c  copyrct0.c  copyrct1.c  drawline.c  drawrect.c  drawstr.c  drwptn_d.c  drwptn_e.c  drwptn_r.c  filloval.c  fillrect.c  flshwin.c  getpix.c  gets.c  icol.c  initfont.c  inkey.c  inptflot.c  inptint.c  keybuf.c  leapflsh.c  locate.c  main.c  openvwin.c  openwin.c  printf.c  putc.c  puts.c  puts1.c  rand.c  readywin.c  rgb.c  rnd.c  (+12 more)
src/drv/drvalsa/: Makefile  Makefile.in  drvalsa_player_thread.c  drvalsa_player_thread.h
src/drv/drvgtk/: Makefile  Makefile.am  Makefile.gtk2  Makefile.in  drvgtk_build_flag.h  drvgtk_interface.c  drvgtk_key_ring_buffer.c  drvgtk_key_ring_buffer.h  drvgtk_keyboard_state.c  drvgtk_keyboard_state.h  drvgtk_keybord_state.c  drvgtk_language.h  drvgtk_main.c  drvgtk_malloc.c  drvgtk_malloc.h  drvgtk_pthread.c  drvgtk_pthread.h  drvgtk_signal.c  drvgtk_signal.h  drvgtk_signal_chain.c  drvgtk_signal_chain.h  drvgtk_sleep.c  drvgtk_sleep.h  drvgtk_system.c  drvgtk_system.h  drvgtk_translate_keycode.c  drvgtk_translate_keycode.h  drvgtk_transrate_keycode.c  drvgtk_transrate_keycode.h  hankaku_font.c  main_screen.c  main_screen.h  main_window.c  main_window.h
src/drv/drvlfb/: Makefile  Makefile.am  Makefile.in  drvlfb_build_flag.h  drvlfb_interface.c  drvlfb_main.c  drvlfb_malloc.c  drvlfb_malloc.h  drvlfb_sleep.c  drvlfb_sleep.h  drvlfb_system.c  drvlfb_system.h
src/drv/wrapper/: Makefile  Makefile.in  bl_main_wrapper.c
src/lib/bl3d/: Makefile  bl3d_matrix.c  bl3d_packet_pool.c  bl3d_system.c  gp
src/lib/bl_load_xpm/: Makefile  Makefile.in
src/lib/bl_lua/: Makefile  Makefile.in
src/lib/bl_malloc/: Makefile.in  bl_malloc_aligned.c
src/lib/bl_math/: Makefile  Makefile.in  bl_dft.c
src/lib/bl_plot/: Makefile
src/lib/bl_spline/: Makefile
src/omake/bl3d/: Makefile.in  bl3d_math.c  bl3d_system.c  bl3d_triangle.c
src/omake/bl_load_xpm/: Makefile.in
src/omake/bl_lua/: Makefile.in  bllua_regist_bl_func.h
src/omake/bl_malloc/: Makefile.in
src/omake/bl_math/: Makefile.in  bl_fast_sincos.c  create_sctbl.c  sctbl.h
src/omake/bl_plot/: Makefile.in
src/omake/bl_spline/: Makefile.in  bl_draw_2db_spline.c
