#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([src/drv/wrapper/bl_main_wrapper.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([pow sqrt])

AC_CONFIG_FILES([Makefile
                 samples/Makefile
                 src/common/Makefile
                 src/drv/drvalsa/Makefile
                 src/drv/drvgtk/Makefile
                 src/drv/drvlfb/Makefile
                 src/drv/wrapper/Makefile
                 src/lib/bl3d/Makefile
                 src/lib/bl_load_xpm/Makefile
                 src/lib/bl_lua/Makefile
                 src/lib/bl_malloc/Makefile
                 src/lib/bl_math/Makefile
                 src/lib/bl_plot/Makefile
                 src/lib/bl_spline/Makefile])
AC_OUTPUT
