#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([c_blike], [0.1.5.2.2], [takeutchkemeco@gmail.com])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([include/config.h])

AX_EXT
AC_SUBST(SIMD_FLAGS)

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
AC_CHECK_LIB([m], [main])
AC_CHECK_LIB([gtk-3], [main], has_gtk3=1, has_gtk=0)
AC_CHECK_LIB([glib-2.0], [main], has_glib=1, has_glib=0)

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([pow sqrt])

AC_CONFIG_FILES([Makefile
                 samples/Makefile
                 src/common/Makefile
                 src/drv/drvgtk/Makefile
                 src/drv/wrapper/Makefile])
AC_OUTPUT

