lib_LTLIBRARIES = libblike-common.la
OPTIMAIZE=-O3 -march=native -mtune=native
INCLUDEDIR='../../include'
libblike_common_la_CFLAGS = -I${INCLUDEDIR} ${OPTIMAIZE}
libblike_common_la_SOURCES =	\
	char8b.c 		\
	clock.c 		\
	cls.c 			\
	color.c 		\
	drawline.c 		\
	drawrect.c 		\
	fillrect.c 		\
	flshwin.c 		\
	getpix.c 		\
	icol.c 			\
	initfont.c 		\
	inptint.c 		\
	inptflot.c 		\
	locate.c 		\
	openwin.c 		\
	printf.c 		\
	putc.c 			\
	puts.c 			\
	puts1.c 		\
	rand.c 			\
	rgb.c 			\
	rnd.c 			\
	scanf.c 		\
	setcol.c		\
	setbcol.c 		\
	setmode.c 		\
	setpix.c 		\
	srand.c 		\
	main.c 			\
	vscanf.c 		\
	wait.c 			\
	waitnf.c 		\
	keybuf.c 		\
	inkey.c 		\
	gets.c 			\
	filloval.c 		\
	drawstr.c 		\
	slctwin.c 		\
	openvwin.c		\
	copyrct0.c 		\
	copyrct1.c 		\
	readywin.c 		\
	setptn0.c 		\
	drwptn_e.c 		\
	drwptn_r.c 		\
	drwptn_d.c 		\
	leapflsh.c		\
	test.c			\
	${INCLUDEDIR}setjmp.h	\
	${INCLUDEDIR}blike.h	\
	${INCLUDEDIR}blike0.h	\
	${INCLUDEDIR}blikedrv.h	\
	${INCLUDEDIR}config.h

